# HttpArena

./: CHANGELOG.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pr-commands.yml
frameworks/actix/: Cargo.toml
frameworks/aleph/: Dockerfile
frameworks/aspnet-minimal/: AppData.cs  Handlers.cs
frameworks/axum/: Cargo.toml  Dockerfile  meta.json
frameworks/axum/src/: main.rs
frameworks/bjoern/: app.py
frameworks/blitz/: Dockerfile  README.md  build.zig  build.zig.zon  meta.json
frameworks/bun/: Dockerfile  meta.json  server.ts
frameworks/django/: views.py
frameworks/dream/: Dockerfile  README.md  meta.json  run.sh
frameworks/drogon/: main.cc  meta.json
frameworks/echo/: go.mod  go.sum  main.go
frameworks/elysia/: server.ts
frameworks/express/: server.js
frameworks/faf/: Cargo.toml  Dockerfile  meta.json
frameworks/fastpysgi-asgi/: Dockerfile  app.py  meta.json  requirements.txt
frameworks/fastpysgi-wsgi/: app.py  requirements.txt
frameworks/frankenphp-trueasync/: meta.json
frameworks/genhttp/: genhttp.csproj  meta.json
frameworks/go-fasthttp/: main.go
frameworks/handy-httpd/: Dockerfile  README.md  dub.sdl  meta.json
frameworks/hono-bun/: server.ts
frameworks/kemal/: meta.json
frameworks/koa/: server.js
frameworks/libreactor/: Dockerfile  README.md  meta.json  server.c
frameworks/lute/: Dockerfile  serve.luau  server.luau
frameworks/mark/: Dockerfile
frameworks/nginx/: Dockerfile  compress.sh  meta.json  nginx.conf
scripts/: benchmark-lite.sh  benchmark.sh  validate.sh
site/: hugo.yaml
(+166 files in other folders)
