[package]
name = "httparena-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num_cpus = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
flate2 = "1"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
futures = "0.3"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
panic = "abort"
